// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot when characters are loaded and dialog is open 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="#main"
      >
        <div
          class="header"
        >
          <img
            alt="logo"
            class="cover-image"
            src="logo.png"
          />
        </div>
      </a>
      <div
        id="main"
      >
        <div
          class="pa2 br3 searchbox"
        >
          <input
            class="f4 pa2 w-100 ba bw1 custom-field"
            placeholder="find your favorite Star Wars character..."
            type="search"
          />
        </div>
        <div
          class="cardlist"
        >
          <button
            class="card pointer"
            id="0"
            type="button"
          >
            <img
              alt="character-portrait"
              id="0"
              src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
            />
            <div
              class="name"
              id="0"
            >
              Anakin Skywalker
            </div>
          </button>
          <button
            class="card pointer"
            id="1"
            type="button"
          >
            <img
              alt="character-portrait"
              id="1"
              src="https://starwars-visualguide.com/assets/img/characters/2.jpg"
            />
            <div
              class="name"
              id="1"
            >
              Obi-Wan Kenoby
            </div>
          </button>
          <button
            class="card pointer"
            id="2"
            type="button"
          >
            <img
              alt="character-portrait"
              id="2"
              src="https://starwars-visualguide.com/assets/img/characters/3.jpg"
            />
            <div
              class="name"
              id="2"
            >
              Yoda
            </div>
          </button>
          <button
            class="card pointer"
            id="3"
            type="button"
          >
            <img
              alt="character-portrait"
              id="3"
              src="https://starwars-visualguide.com/assets/img/characters/4.jpg"
            />
            <div
              class="name"
              id="3"
            >
              Darth Vader
            </div>
          </button>
          <button
            class="card pointer"
            id="4"
            type="button"
          >
            <img
              alt="character-portrait"
              id="4"
              src="https://starwars-visualguide.com/assets/img/characters/5.jpg"
            />
            <div
              class="name"
              id="4"
            >
              Luke Skywalker
            </div>
          </button>
          <button
            class="card pointer"
            id="5"
            type="button"
          >
            <img
              alt="character-portrait"
              id="5"
              src="https://starwars-visualguide.com/assets/img/characters/6.jpg"
            />
            <div
              class="name"
              id="5"
            >
              Palpatine
            </div>
          </button>
        </div>
      </div>
      <footer
        class="pa2 ph5-m ph6-l tc bg-near-black"
      >
        <small
          class="pa2 f6 db tc lightest-blue"
        >
          <b
            class="ttu"
          >
            GUILHERME BRUNNER
          </b>
           2021
        </small>
        <small
          class="pa2"
        >
          <a
            href="https://sgtbrunner.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="f6 dib ph2 link lightest-blue dim"
            >
              Visit my 
              <b>
                PORTFOLIO
              </b>
            </div>
          </a>
        </small>
      </footer>
      <div
        class="overlay"
        id="overlay"
        role="dialog"
      >
        <div
          class="dialog-content"
        >
          <span
            class="close"
          >
            <button
              class="bn pointer bg-transparent"
              type="button"
            >
              ×
            </button>
          </span>
          <div
            class="stats-list"
          >
            <img
              alt="0"
              class="portrait"
              src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
            />
            <div
              class="char-name"
            >
              Anakin Skywalker
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Species
              </u>
              : Human 
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Gender
              </u>
              : Male 
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Birth Year
              </u>
              : 41.9BBY 
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Height
              </u>
              : 188 cm
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Weight
              </u>
              : 84 Kg
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Homeworld
              </u>
              : Tatooine 
            </div>
            <div
              class="stats"
              role="listitem"
            >
              <u>
                Films
              </u>
              : The Phantom Menace, Attack of the Clones, Revenge of the Sith 
            </div>
          </div>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <a
      href="#main"
    >
      <div
        class="header"
      >
        <img
          alt="logo"
          class="cover-image"
          src="logo.png"
        />
      </div>
    </a>
    <div
      id="main"
    >
      <div
        class="pa2 br3 searchbox"
      >
        <input
          class="f4 pa2 w-100 ba bw1 custom-field"
          placeholder="find your favorite Star Wars character..."
          type="search"
        />
      </div>
      <div
        class="cardlist"
      >
        <button
          class="card pointer"
          id="0"
          type="button"
        >
          <img
            alt="character-portrait"
            id="0"
            src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
          />
          <div
            class="name"
            id="0"
          >
            Anakin Skywalker
          </div>
        </button>
        <button
          class="card pointer"
          id="1"
          type="button"
        >
          <img
            alt="character-portrait"
            id="1"
            src="https://starwars-visualguide.com/assets/img/characters/2.jpg"
          />
          <div
            class="name"
            id="1"
          >
            Obi-Wan Kenoby
          </div>
        </button>
        <button
          class="card pointer"
          id="2"
          type="button"
        >
          <img
            alt="character-portrait"
            id="2"
            src="https://starwars-visualguide.com/assets/img/characters/3.jpg"
          />
          <div
            class="name"
            id="2"
          >
            Yoda
          </div>
        </button>
        <button
          class="card pointer"
          id="3"
          type="button"
        >
          <img
            alt="character-portrait"
            id="3"
            src="https://starwars-visualguide.com/assets/img/characters/4.jpg"
          />
          <div
            class="name"
            id="3"
          >
            Darth Vader
          </div>
        </button>
        <button
          class="card pointer"
          id="4"
          type="button"
        >
          <img
            alt="character-portrait"
            id="4"
            src="https://starwars-visualguide.com/assets/img/characters/5.jpg"
          />
          <div
            class="name"
            id="4"
          >
            Luke Skywalker
          </div>
        </button>
        <button
          class="card pointer"
          id="5"
          type="button"
        >
          <img
            alt="character-portrait"
            id="5"
            src="https://starwars-visualguide.com/assets/img/characters/6.jpg"
          />
          <div
            class="name"
            id="5"
          >
            Palpatine
          </div>
        </button>
      </div>
    </div>
    <footer
      class="pa2 ph5-m ph6-l tc bg-near-black"
    >
      <small
        class="pa2 f6 db tc lightest-blue"
      >
        <b
          class="ttu"
        >
          GUILHERME BRUNNER
        </b>
         2021
      </small>
      <small
        class="pa2"
      >
        <a
          href="https://sgtbrunner.github.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="f6 dib ph2 link lightest-blue dim"
          >
            Visit my 
            <b>
              PORTFOLIO
            </b>
          </div>
        </a>
      </small>
    </footer>
    <div
      class="overlay"
      id="overlay"
      role="dialog"
    >
      <div
        class="dialog-content"
      >
        <span
          class="close"
        >
          <button
            class="bn pointer bg-transparent"
            type="button"
          >
            ×
          </button>
        </span>
        <div
          class="stats-list"
        >
          <img
            alt="0"
            class="portrait"
            src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
          />
          <div
            class="char-name"
          >
            Anakin Skywalker
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Species
            </u>
            : Human 
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Gender
            </u>
            : Male 
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Birth Year
            </u>
            : 41.9BBY 
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Height
            </u>
            : 188 cm
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Weight
            </u>
            : 84 Kg
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Homeworld
            </u>
            : Tatooine 
          </div>
          <div
            class="stats"
            role="listitem"
          >
            <u>
              Films
            </u>
            : The Phantom Menace, Attack of the Clones, Revenge of the Sith 
          </div>
        </div>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App should match snapshot when characters are loaded and no dialog is open 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="#main"
      >
        <div
          class="header"
        >
          <img
            alt="logo"
            class="cover-image"
            src="logo.png"
          />
        </div>
      </a>
      <div
        id="main"
      >
        <div
          class="pa2 br3 searchbox"
        >
          <input
            class="f4 pa2 w-100 ba bw1 custom-field"
            placeholder="find your favorite Star Wars character..."
            type="search"
          />
        </div>
        <div
          class="cardlist"
        >
          <button
            class="card pointer"
            id="0"
            type="button"
          >
            <img
              alt="character-portrait"
              id="0"
              src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
            />
            <div
              class="name"
              id="0"
            >
              Anakin Skywalker
            </div>
          </button>
          <button
            class="card pointer"
            id="1"
            type="button"
          >
            <img
              alt="character-portrait"
              id="1"
              src="https://starwars-visualguide.com/assets/img/characters/2.jpg"
            />
            <div
              class="name"
              id="1"
            >
              Obi-Wan Kenoby
            </div>
          </button>
          <button
            class="card pointer"
            id="2"
            type="button"
          >
            <img
              alt="character-portrait"
              id="2"
              src="https://starwars-visualguide.com/assets/img/characters/3.jpg"
            />
            <div
              class="name"
              id="2"
            >
              Yoda
            </div>
          </button>
          <button
            class="card pointer"
            id="3"
            type="button"
          >
            <img
              alt="character-portrait"
              id="3"
              src="https://starwars-visualguide.com/assets/img/characters/4.jpg"
            />
            <div
              class="name"
              id="3"
            >
              Darth Vader
            </div>
          </button>
          <button
            class="card pointer"
            id="4"
            type="button"
          >
            <img
              alt="character-portrait"
              id="4"
              src="https://starwars-visualguide.com/assets/img/characters/5.jpg"
            />
            <div
              class="name"
              id="4"
            >
              Luke Skywalker
            </div>
          </button>
          <button
            class="card pointer"
            id="5"
            type="button"
          >
            <img
              alt="character-portrait"
              id="5"
              src="https://starwars-visualguide.com/assets/img/characters/6.jpg"
            />
            <div
              class="name"
              id="5"
            >
              Palpatine
            </div>
          </button>
        </div>
      </div>
      <footer
        class="pa2 ph5-m ph6-l tc bg-near-black"
      >
        <small
          class="pa2 f6 db tc lightest-blue"
        >
          <b
            class="ttu"
          >
            GUILHERME BRUNNER
          </b>
           2021
        </small>
        <small
          class="pa2"
        >
          <a
            href="https://sgtbrunner.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="f6 dib ph2 link lightest-blue dim"
            >
              Visit my 
              <b>
                PORTFOLIO
              </b>
            </div>
          </a>
        </small>
      </footer>
      ,
    </div>
  </body>,
  "container": <div>
    <a
      href="#main"
    >
      <div
        class="header"
      >
        <img
          alt="logo"
          class="cover-image"
          src="logo.png"
        />
      </div>
    </a>
    <div
      id="main"
    >
      <div
        class="pa2 br3 searchbox"
      >
        <input
          class="f4 pa2 w-100 ba bw1 custom-field"
          placeholder="find your favorite Star Wars character..."
          type="search"
        />
      </div>
      <div
        class="cardlist"
      >
        <button
          class="card pointer"
          id="0"
          type="button"
        >
          <img
            alt="character-portrait"
            id="0"
            src="https://starwars-visualguide.com/assets/img/characters/1.jpg"
          />
          <div
            class="name"
            id="0"
          >
            Anakin Skywalker
          </div>
        </button>
        <button
          class="card pointer"
          id="1"
          type="button"
        >
          <img
            alt="character-portrait"
            id="1"
            src="https://starwars-visualguide.com/assets/img/characters/2.jpg"
          />
          <div
            class="name"
            id="1"
          >
            Obi-Wan Kenoby
          </div>
        </button>
        <button
          class="card pointer"
          id="2"
          type="button"
        >
          <img
            alt="character-portrait"
            id="2"
            src="https://starwars-visualguide.com/assets/img/characters/3.jpg"
          />
          <div
            class="name"
            id="2"
          >
            Yoda
          </div>
        </button>
        <button
          class="card pointer"
          id="3"
          type="button"
        >
          <img
            alt="character-portrait"
            id="3"
            src="https://starwars-visualguide.com/assets/img/characters/4.jpg"
          />
          <div
            class="name"
            id="3"
          >
            Darth Vader
          </div>
        </button>
        <button
          class="card pointer"
          id="4"
          type="button"
        >
          <img
            alt="character-portrait"
            id="4"
            src="https://starwars-visualguide.com/assets/img/characters/5.jpg"
          />
          <div
            class="name"
            id="4"
          >
            Luke Skywalker
          </div>
        </button>
        <button
          class="card pointer"
          id="5"
          type="button"
        >
          <img
            alt="character-portrait"
            id="5"
            src="https://starwars-visualguide.com/assets/img/characters/6.jpg"
          />
          <div
            class="name"
            id="5"
          >
            Palpatine
          </div>
        </button>
      </div>
    </div>
    <footer
      class="pa2 ph5-m ph6-l tc bg-near-black"
    >
      <small
        class="pa2 f6 db tc lightest-blue"
      >
        <b
          class="ttu"
        >
          GUILHERME BRUNNER
        </b>
         2021
      </small>
      <small
        class="pa2"
      >
        <a
          href="https://sgtbrunner.github.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="f6 dib ph2 link lightest-blue dim"
          >
            Visit my 
            <b>
              PORTFOLIO
            </b>
          </div>
        </a>
      </small>
    </footer>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App should match snapshot when characters are loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="loader"
      >
        <div
          class="loader-content animate-flicker"
        >
          Please wait...
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="loader"
    >
      <div
        class="loader-content animate-flicker"
      >
        Please wait...
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
